feat: Adjusted funding pages

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,4 @@
-custom: ["https://github.com/fmpisantos"]
+# These are supported funding model platforms
+
+github: [fmpisantos]
+custom: ['https://www.paypal.com/donate/?hosted_button_id=3DGJLLQ7RPF94']
